syntax = "proto3";

package serviceauth;

option go_package = "/serviceauth";

service ServiceAuth {
  rpc VerifyAccessToken(AccessTokenRequest) returns (TokenResponse);
}

message AccessTokenRequest {
  string access_token = 1;
}

message TokenResponse {
  string iss = 1;
  int64 iat = 2;
  int64 exp = 3;
  string user_id = 4;
  string channel_id = 5;
}